--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "equals.ts",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "equals CLI",
   "private": false,
+  "repository": "https://github.com/jefeez/equals",
   "bin": {
     "equals": "bin/equals"
   },
